--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -54,18 +54,25 @@ jobs:
             org.opencontainers.image.title=${{ env.DOCKER_NAME }}
             org.opencontainers.image.description=${{ env.DOCKER_DESCRIPTION }}
 
-  # Job to build and push Docker Image
+  # Job to build and push Docker Image for each architecture
   build:
-    name: Build and Push Docker Image
-    runs-on: ubuntu-latest
+    name: Build and Push ${{ matrix.platform }} Image
     needs: metadata
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - arch: amd64
+            platform: linux/amd64
+            runner: ubuntu-latest
+          - arch: arm64
+            platform: linux/arm64
+            runner: ubuntu-22.04-arm
+    runs-on: ${{ matrix.runner }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -77,7 +84,24 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and publish container image
+      - name: Prepare tags for ${{ matrix.arch }}
+        id: arch_tags
+        run: |
+          set -euo pipefail
+          tags="${{ needs.metadata.outputs.tags }}"
+          arch="${{ matrix.arch }}"
+          arch_tags=""
+          while IFS= read -r tag; do
+            [[ -z "$tag" ]] && continue
+            arch_tags+="${tag}-${arch}"$'\n'
+          done <<< "$tags"
+          {
+            echo "tags<<EOF"
+            printf '%s' "$arch_tags"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
+
+      - name: Build and publish ${{ matrix.platform }} image
         uses: docker/build-push-action@v6
         id: build
         with:
@@ -85,6 +109,37 @@ jobs:
           file: ./Dockerfile
           push: true
           provenance: false
-          tags: ${{ needs.metadata.outputs.tags }}
+          platforms: ${{ matrix.platform }}
+          tags: ${{ steps.arch_tags.outputs.tags }}
           labels: ${{ needs.metadata.outputs.labels }}
-          platforms: ${{ needs.metadata.outputs.platforms }}
+
+  manifest:
+    name: Publish Multi-Architecture Manifest
+    runs-on: ubuntu-latest
+    needs:
+      - metadata
+      - build
+
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Repository
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create multi-architecture manifests
+        env:
+          TAGS: ${{ needs.metadata.outputs.tags }}
+        run: |
+          set -euo pipefail
+          while IFS= read -r tag; do
+            [[ -z "$tag" ]] && continue
+            docker buildx imagetools create \
+              -t "$tag" \
+              "${tag}-amd64" \
+              "${tag}-arm64"
+          done <<< "$TAGS"
